# picoha

./: .coverage  .coveragerc  .gitignore  Cargo.toml  Doxyfile  README.md  docker-compose.yml  gpaperlog.txt  gpaperwork.json  gpaperwork.yml  package-monitor.sh
.github/workflows/: ppaperwork.yml  test.yml
.tests/: README.md  tests.md
.tests/actions/: action.md
.tests/features/: README.md  features.md  io.feature
firmware/: Cargo.toml  README.md
firmware/features/: i2c_master.feature  usb.feature  version.feature
firmware/src/: config.rs  main.rs  panic.rs
firmware/src/application/: buffer.rs  mod.rs  panic.rs  usbctrl.rs
firmware/src/platform/: mod.rs
firmware/steps/: free.py  usb.py  version.py
firmware/tools/: list_usb_tty.py  simple_json.py  simple_json_spi.py
firmwares/io/: README.md
firmwares/io/.tests/steps/: version.py
firmwares/io/.tests/tools/: simple_blink_test.py  simple_json.py
firmwares/io/src/: main.rs
firmwares/io/src/application/: mod.rs  panic.rs  usbctrl.rs
firmwares/io_old/: Cargo.toml
firmwares/io_old/.tests/features/: usb.feature
firmwares/io_old/src/: main.rs
firmwares/io_old/src/application/: mod.rs  panic.rs  usbctrl.rs
firmwares/spi_twi/: Cargo.toml  FW_SPI_TWI.md  README.md  behave.ini
firmwares/spi_twi/features/: i2c_master.feature  version.feature
firmwares/spi_twi/src/application/: panic.rs  usbctrl.rs
firmwares/spi_twi/steps/: usb.py
firmwares/spi_twi/tools/: list_usb_tty.py  simple_json.py
panduza/src/pza_drv_aardvark_pico_clone/: __init__.py  driver_aapicoclone_twi_master.py
panduza/src/pza_drv_picoha/: driver_picoha_twi_master.py
panduza_class_picoha/: __init__.py  driver_picoha_io.py
src/: main.rs
