[package]
name = "pipico-aardvark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"

embedded-time = "0.12.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }

usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"

rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = "0.3.0"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

rp-pico = "0.2.0"
panic-halt= "0.2.0"


[features]
boot2 = ["rp2040-boot2"]

